ui/css/treeherder.css
/* ... */
/* Override bootstrap for flush right navbar menus */
.navbar-collapse {
    padding-right: 0;
}

.navbar .repo-menu-form {
    padding: 5px 10px 0;
    overflow-y: scroll;
    top: inherit;
    right: auto;
}

.nav-repo-btn {
    padding-left: 14px;
    padding-right: 14px;
}

.nav-menu-btn {
    margin-right: -4px;
    padding-left: 14px;
    padding-right: 14px;
}

.nav-help-btn {
    margin-right: -4px;
}

.nav-help-icon {
    font-size: 18px;
}

.nav-user-icon {
    display: inline-block;
    margin-right: 4px;
    padding: 3px 4px;
    vertical-align: text-bottom;
    border-radius: 1px;
    background: linear-gradient(#44adf3, #287cc2);
}

.nav-user-icon span:first-child {
    margin: 0 auto;
    font-size: 12px;
    color: #fff;
}

.nav-login-btn {
    padding-left: 22px;
    padding-right: 27px;
}

.watched-repo-main-btn {
    border-right: 0;
    padding-right: 5px;
}

.watched-repo-spacer {
    padding-right: 7px;
}

.watched-repo-info-btn {
    border-right: 0
}

.watched-repo-unwatch-btn {
}

.watched-repo-dropdown-item {
    margin: 0px 10px;
}
.watched-repo-dropdown-item > a {
    white-space: normal;
}

.watched-repo-navbar {
    overflow: visible;
}

/* Unique navbar username styles */
.th-username, th-username:hover {
    padding-left: 18px;
    cursor: default;
    color: #777 !important;
    border-color: #373d40;
    border-radius: 0;
    border-top: 0;
    border-bottom: 0;
    border-right: 0;
}

.th-context-navbar {
    background-color: #354048;
    overflow: visible;
}

.treeClosed {
    color: rgb(161, 52, 53);
}

.treeOpen {
    color: green;
}

.treeApproval {
    color: #fb9910;
}

.treeUnavailable {
    color: lightgray;
}

#platform-job-text-search-field {
    height:28px;
    width: 150px;
    display: inherit;
    transition: width 0.2s;
}

#platform-job-text-search-field-parent {
    position: relative;
}

#platform-job-text-search-field:focus,
#platform-job-text-search-field:valid {
    width: 300px !important;
    padding-right: 20px;
}

#platform-job-text-search-field:valid + #filter-clear-button {
    display: inherit;
}

#filter-clear-button {
    color: #bababa;
    font-size: 13px;
    cursor: pointer;
    position: absolute;
    display: none;
    top: 7px;
    right: 5px;
    height: 16px;
}

.th-content {
    flex: 1; /* Not using auto because it causes unnecessary reflows, see https://bugzilla.mozilla.org/show_bug.cgi?id=1162725 */
    -webkit-flex: auto;
    position: relative;/* need this to position inner content */
    overflow-y: auto;
}

.nav-panel-help-text {
    color: #2b393f;
    margin-bottom: 10px;
}

/* Options drop-downs*/

.th-top-nav-options-panel {
    background-color: lightgray;
    padding: 10px;
    border: 1px solid black;
    max-height: 400px;
    overflow-y: auto;
}

.th-top-nav-options-panel .th-option-heading {
    padding: 3px 10px;
    background-color: #354048;;
    color: white;
}

.th-inline-option-group {
    display: inline-block;
}

.th-stacked-option-group {
    display: block;
}

.th-option-group {
    margin-right: 5px;
    border: 1px solid #101010;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border-radius:5px;
}

.th-option-heading .th-panel-heading{
    padding: 5px 10px;
    background-color: #354048;
}

#jobFilterValue {
    width: 150px;
}

#jobFilterChoiceValue {
    width: 150px;
}

#jobFilterField {
    width: 200px;
}

.field-filter-form {
    border-top: 2px solid lightgray;
    margin-top: 5px;
    padding: 3px;
    background-color: lightgray;
}

.field-filter {
    margin: 3px;
}

.field-filter a, .th-option-heading a {
    color: white;
    cursor: pointer;
}

.field-filter-placeholder a {
    cursor: pointer;
}

/**
  sheriff panel
*/
.add-new-exclusion input.ng-invalid.ng-dirty{border-color: #B94A48;}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.revision > a:first-child {
    float: left;
    width: 7.5em;
    padding-top: 2px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.revision-comment {
    color: #777;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
    width: 14.5em;
    min-width: 14.5em;
    overflow: hidden;
    vertical-align: top;
}

.job-row {
    display: table-cell;
    white-space: normal;
    word-break: normal;

}

.icon-superscript {
    vertical-align: super;
    font-size: 0.625em;
    margin-left: -0.2em;
}

.result-set {
    padding-bottom: 0px;
    margin-left: 0;
    margin-top: 2px;
    white-space: normal;
    width: 100%;
    border-top: 1px solid lightgrey;
    position: relative;
}

.result-set-body {
    padding-left: 15px;
    padding-right: 25px;
}

/* Encompasses unknown push,resultset,repo */
.unknown-message-body {
    padding-top: 10px;
}

.result-set-title-left {
    flex: 0 0 24.2em;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 10px;
}

.result-set-fa-icon {
    float: left;
    padding-top: 4px;
    padding-right: 4px;
}

.result-counts {
    flex: none;
    -webkit-flex: none;
    padding-right: 10px;
}
/* ... */

